{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 48,
  "lineage": "67a76516-df0d-e3e8-ba44-c7687db34521",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bc5fafddbd281ddb",
            "owner_id": "922326500294",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-099b67fe381a5a521"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aee8cf5964007c44",
            "owner_id": "922326500294",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc5fafddbd281ddb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-099b67fe381a5a521"
          },
          "depends_on": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054dd13b38bd41fbe",
            "route_table_id": "rtb-0aee8cf5964007c44",
            "subnet_id": "subnet-040ada3874ce412a6"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06602c2ea77f145a5",
            "route_table_id": "rtb-0aee8cf5964007c44",
            "subnet_id": "subnet-0af97cf65548db3d8"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:922326500294:security-group/sg-04b755def96f16f4f",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-04b755def96f16f4f",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": null,
            "owner_id": "922326500294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b67fe381a5a521"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:922326500294:security-group/sg-0f79a7c4397c4239c",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f79a7c4397c4239c",
            "ingress": [],
            "name": "terraform-eks-demo-node",
            "name_prefix": null,
            "owner_id": "922326500294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-099b67fe381a5a521"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-node-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3793134437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04b755def96f16f4f",
            "self": false,
            "source_security_group_id": "sg-0f79a7c4397c4239c",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2391517054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f79a7c4397c4239c",
            "self": false,
            "source_security_group_id": "sg-04b755def96f16f4f",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3549691534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f79a7c4397c4239c",
            "self": false,
            "source_security_group_id": "sg-0f79a7c4397c4239c",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:922326500294:subnet/subnet-040ada3874ce412a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-040ada3874ce412a6",
            "map_public_ip_on_launch": false,
            "owner_id": "922326500294",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-099b67fe381a5a521"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:922326500294:subnet/subnet-0af97cf65548db3d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0af97cf65548db3d8",
            "map_public_ip_on_launch": false,
            "owner_id": "922326500294",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-099b67fe381a5a521"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:922326500294:vpc/vpc-099b67fe381a5a521",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0845cb819df2d54d8",
            "default_route_table_id": "rtb-069af4fec0c435538",
            "default_security_group_id": "sg-04ac56294cd6a9215",
            "dhcp_options_id": "dopt-f6360d91",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-099b67fe381a5a521",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069af4fec0c435538",
            "owner_id": "922326500294",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}